--- a/views/default/index.html
+++ b/views/default/index.html
@@ -3,36 +3,7 @@
 {{block title}}SlugScheduler{{end}}
 
 {{block header}}
-<!-- Static navbar -->
-<nav class="navbar navbar-default"
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <span class="navbar-brand" onClick="window.location.reload()">
-                SlugScheduler
-            </span>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav nav-text">
-                <li class="active"><a href="{{=URL('views', 'default/index.html')}}">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-                
-            </ul>
-        </div>
-    </div>
-</nav>
 {{end}}
-
-
-
 
 <!-- Jumbotron block -->
 {{block jumbo}}
@@ -43,16 +14,8 @@
 
 <!-- Body block -->
 {{block body}}
-<div class="container">
-    <!-- CODE TO DISPLAY SCHEDULE GOES HERE -->
+<div class="container body-block">
+   {{=schedule}}
 </div>
 {{end}}
 
-<!-- Footer block -->
-{{block footer}}
-<footer class="footer">
-    <div class="container-fluid">
-        <div class="copyright pull-left">SlugScheduler &#169; {{=request.now.year}}</div>
-    </div>
-</footer>
-{{end}}
