--- a/views/layout.html
+++ b/views/layout.html
@@ -44,8 +44,9 @@ user-scalable = yes allows the user to zoom in -->
   {{block body}}
   {{end}}
 
-  {{block footer}}
-  {{end}}
+  <footer class="footer slug-footer text-center" style="">
+    <div class="slug-copyright" style="margin-top: 50px;">SlugScheduler &#169; {{=request.now.year}}</div>
+  </footer>
 
   <!-- The javascript =============================== -->
   <script src="{{=URL('static','js/bootstrap.min.js')}}"></script>
@@ -60,7 +61,5 @@ user-scalable = yes allows the user to zoom in -->
     });
   </script>
   {{pass}}
-  <!-- Share ============================y============ -->
-  <script src="{{=URL('static','js/share.js',vars=dict(static=URL('static','images')))}}"></script>
 </body>
 </html>
