--- a/views/default/index.html
+++ b/views/default/index.html
@@ -43,7 +43,7 @@
       {{for course in quarter:}}
         <div class="row text-center">
           <div class="col-md-4">
-            {{=course.nbr}}
+            {{=course.name}}
           </div>
           <div class="col-md-4">
             {{=course.title}}
